# backend

./: .gitignore  Dockerfile  README.md  cert.sh  dev.env  docker-compose-dev.yml  docker-compose.yml  manage.py  prod.env  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: ci.yml
Dangnyang_Heroes/: asgi.py  urls.py  wsgi.py
Dangnyang_Heroes/settings/: __init__.py  base.py  dev.py  prod.py
applications/: apps.py  models.py  serializers.py  urls.py  views.py
applications/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_alter_application_status.py
common/: models.py  utils.py
histories/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
histories/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
nginx/: default.bak.conf  default.conf
recruitments/: admin.py  models.py  serializers.py  urls.py  views.py
recruitments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_recruitment_description.py  0004_recruitmentimage.py  0005_alter_recruitmentimage_table.py
scripts/: run.sh
shelters/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
shelters/migrations/: 0001_initial.py  0002_initial.py  0003_shelter_contact_number.py  0004_alter_shelter_address_and_more.py  0004_delete_shelterimage.py  0005_merge_20250325_1254.py
users/: models.py  serializers.py  services.py  urls.py  views.py
volunteer_application/: apps.py  models.py
volunteer_history/: apps.py  models.py
(+5 files in other folders)
